--- a/index.html
+++ b/index.html
@@ -7,125 +7,276 @@
     body {
       margin: 0;
       font-family: Arial, sans-serif;
-      background: #f5f5f5;
     }
-    .chat-container {
-      max-width: 600px;
-      margin: 40px auto;
-      background: #fff;
-      border-radius: 8px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      overflow: hidden;
-      display: flex;
-      flex-direction: column;
-    }
-    .messages {
-      padding: 20px;
-      height: 400px;
-      overflow-y: auto;
-    }
-    .message {
-      margin-bottom: 15px;
-      padding: 10px 15px;
-      border-radius: 18px;
-      max-width: 80%;
-      word-wrap: break-word;
-    }
-    .user {
-      background: #007bff;
+
+    #open-btn {
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      background-color: #3f51b5;
       color: white;
-      align-self: flex-end;
-    }
-    .bot {
-      background: #e4e6eb;
-      color: black;
-      align-self: flex-start;
-    }
-    .input-area {
-      display: flex;
-      border-top: 1px solid #ccc;
-    }
-    input {
-      flex: 1;
-      padding: 15px;
-      border: none;
-      border-radius: 0;
-      outline: none;
-      font-size: 16px;
-    }
-    button {
-      background: #007bff;
-      color: white;
-      border: none;
-      padding: 0 25px;
+      width: 60px;
+      height: 60px;
+      border-radius: 50%;
+      font-size: 24px;
+      text-align: center;
+      line-height: 60px;
       cursor: pointer;
-      font-size: 16px;
+      box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
+      z-index: 9999;
     }
-    button:hover {
-      background: #0056b3;
+
+    #chat-widget {
+      display: none;
+      flex-direction: column;
+      position: fixed;
+      bottom: 20px;
+      right: 20px;
+      width: 350px;
+      max-height: 500px;
+      border-radius: 15px;
+      overflow: hidden;
+      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+      background-color: #fff;
+      z-index: 10000;
+    }
+
+    #chat-header {
+      background-color: #3f51b5;
+      color: #fff;
+      padding: 10px;
+      font-weight: bold;
+      display: flex;
+      justify-content: space-between;
+      align-items: center;
+    }
+
+    #close-btn {
+      background: none;
+      border: none;
+      color: white;
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    #chatbox {
+      padding: 10px;
+      flex-grow: 1;
+      overflow-y: auto;
+      background-color: #f5f5f5;
+      height: 250px;
+    }
+
+    .message {
+      margin: 5px 0;
+    }
+
+    .user { color: #0066cc; }
+    .bot { color: #28a745; }
+
+    .bot-button {
+      display: inline-block;
+      background: #3f51b5;
+      color: white;
+      border: none;
+      padding: 5px 10px;
+      margin: 3px 5px 3px 0;
+      border-radius: 5px;
+      cursor: pointer;
+      font-size: 13px;
+    }
+
+    #chat-controls {
+      display: flex;
+      justify-content: space-between;
+      padding: 8px 10px;
+      font-size: 14px;
+      border-top: 1px solid #ccc;
+      background-color: #fafafa;
+    }
+
+    #chat-input {
+      display: flex;
+      padding: 10px;
+      border-top: 1px solid #ccc;
+      background-color: #fff;
+    }
+
+    #userInput {
+      flex-grow: 1;
+      padding: 6px;
+      font-size: 14px;
+    }
+
+    #sendBtn, #micBtn {
+      margin-left: 5px;
+      padding: 6px 10px;
+      cursor: pointer;
     }
   </style>
 </head>
 <body>
-  <div class="chat-container">
-    <div class="messages" id="chat"></div>
-    <div class="input-area">
-      <input type="text" id="message" placeholder="Type your message..." />
-      <button onclick="sendMessage()">Send</button>
-    </div>
+
+<div id="open-btn">💬</div>
+
+<div id="chat-widget">
+  <div id="chat-header">
+    🤖 Unified Bot
+    <button id="close-btn">✖</button>
   </div>
 
-  <script>
-    // Rasa Backend URL (change this to your EC2 IP or domain)
-    const RASA_URL = "http://13.203.79.224:5005/webhooks/rest/webhook";
+  <div id="chatbox"></div>
 
-    const chat = document.getElementById("chat");
-    const input = document.getElementById("message");
+  <div id="chat-controls">
+    🌍 Language:
+    <select id="languageSelect">
+      <option value="en-US">English</option>
+      <option value="hi-IN">Hindi</option>
+      <option value="te-IN">Telugu</option>
+    </select>
+    <button id="micBtn">🎙️</button>
+  </div>
 
-    function addMessage(text, className) {
-      const msg = document.createElement("div");
-      msg.className = `message ${className}`;
-      msg.textContent = text;
-      chat.appendChild(msg);
-      chat.scrollTop = chat.scrollHeight;
-    }
+  <div id="chat-input">
+    <input type="text" id="userInput" placeholder="Ask me anything..." />
+    <button id="sendBtn">Send</button>
+  </div>
+</div>
 
-    function sendMessage() {
-      const text = input.value;
-      if (!text) return;
+<script>
+  const chatWidget = document.getElementById("chat-widget");
+  const openBtn = document.getElementById("open-btn");
+  const closeBtn = document.getElementById("close-btn");
+  const chatbox = document.getElementById("chatbox");
+  const input = document.getElementById("userInput");
+  const micBtn = document.getElementById("micBtn");
+  let recognition;
+  let lang = 'en-US';
 
-      addMessage(text, "user");
-      input.value = "";
+  openBtn.onclick = () => {
+    chatWidget.style.display = "flex";
+    openBtn.style.display = "none";
+  };
 
-      fetch(RASA_URL, {
-        method: "POST",
-        headers: {
-          "Content-Type": "application/json"
-        },
-        body: JSON.stringify({
-          sender: "user",
-          message: text
-        })
-      })
-        .then(res => res.json())
-        .then(data => {
-          data.forEach(response => {
-            if (response.text) {
-              addMessage(response.text, "bot");
-            }
-          });
-        })
-        .catch(error => {
-          console.error("Error:", error);
-          addMessage("Something went wrong with the server.", "bot");
-        });
-    }
+  closeBtn.onclick = () => {
+    chatWidget.style.display = "none";
+    openBtn.style.display = "block";
+  };
 
-    input.addEventListener("keypress", function (e) {
-      if (e.key === "Enter") {
-        sendMessage();
-      }
+  if ('SpeechRecognition' in window || 'webkitSpeechRecognition' in window) {
+    recognition = new (window.SpeechRecognition || window.webkitSpeechRecognition)();
+    recognition.continuous = false;
+    recognition.interimResults = false;
+    recognition.lang = lang;
+
+    recognition.onresult = function(event) {
+      const transcript = event.results[0][0].transcript;
+      input.value = transcript;
+      sendText();
+    };
+  }
+
+  document.getElementById('languageSelect').addEventListener('change', (e) => {
+    lang = e.target.value;
+    if (recognition) recognition.lang = lang;
+  });
+
+  micBtn.onclick = () => {
+    if (recognition) recognition.start();
+    else alert("Speech recognition not supported.");
+  };
+
+  function speak(text) {
+    const msg = new SpeechSynthesisUtterance(text);
+    msg.lang = lang;
+    window.speechSynthesis.speak(msg);
+  }
+
+  function addMessage(sender, message) {
+    const msgDiv = document.createElement("div");
+    msgDiv.className = `message ${sender}`;
+    msgDiv.innerText = `${sender === 'user' ? 'You' : 'Bot'}: ${message}`;
+    chatbox.appendChild(msgDiv);
+    chatbox.scrollTop = chatbox.scrollHeight;
+  }
+
+  function addButtons(buttons) {
+    const btnContainer = document.createElement("div");
+    buttons.forEach(btn => {
+      const button = document.createElement("button");
+      button.className = "bot-button";
+      button.innerText = btn.title;
+      button.onclick = () => {
+        input.value = btn.payload;
+        sendText();
+      };
+      btnContainer.appendChild(button);
     });
-  </script>
+    chatbox.appendChild(btnContainer);
+    chatbox.scrollTop = chatbox.scrollHeight;
+  }
+
+  async function translate(text, targetLang) {
+    if (targetLang === "en-US") return text;
+    const translations = {
+      "హలో": "Hello", "హాయ్": "Hi", "నమస్తే": "Hello", "హెచ్‌ఐ": "Hi",
+      "हाय": "Hi", "नमस्ते": "Hello"
+    };
+    return translations[text] || text;
+  }
+
+  async function translateBack(text, targetLang) {
+    if (targetLang === "en-US") return text;
+    const replies = {
+      "👋 Hey there! How can I help you today? 😊": {
+        "hi-IN": "👋 नमस्ते! मैं आपकी किस प्रकार मदद कर सकता हूँ? 😊",
+        "te-IN": "👋 హాయ్! నేను మీకు ఎలా సహాయపడగలను? 😊"
+      },
+      "See ya! Have a great day! 😍": {
+        "hi-IN": "फिर मिलेंगे! आपका दिन शुभ हो! 😍",
+        "te-IN": "మళ్లీ కలుద్దాం! మంచి రోజు గడపండి! 😍"
+      }
+    };
+    return replies[text]?.[targetLang] || text;
+  }
+
+  async function sendText() {
+    const message = input.value.trim();
+    if (!message) return;
+
+    const selectedLang = document.getElementById("languageSelect").value;
+    addMessage("user", message);
+    input.value = "";
+
+    const translatedMsg = await translate(message, selectedLang);
+
+    fetch("http://13.203.79.224:5005/webhooks/rest/webhook", {
+      method: "POST",
+      headers: { "Content-Type": "application/json" },
+      body: JSON.stringify({ sender: "user", message: translatedMsg }),
+    })
+    .then(res => res.json())
+    .then(async (data) => {
+      if (data && data.length > 0) {
+        for (const item of data) {
+          let responseText = item.text || "";
+          responseText = await translateBack(responseText, selectedLang);
+          addMessage("bot", responseText);
+          speak(responseText);
+          if (item.buttons) addButtons(item.buttons);
+        }
+      } else {
+        addMessage("bot", "I didn't understand that.");
+      }
+    })
+    .catch((err) => {
+      console.error(err);
+      addMessage("bot", "Error communicating with the bot.");
+    });
+  }
+
+  document.getElementById("sendBtn").onclick = sendText;
+</script>
+
 </body>
 </html>
